tableset schema mentionned in registry part

--- a/ObsCoreExtensionForRadioData.tex
+++ b/ObsCoreExtensionForRadioData.tex
@@ -783,7 +783,7 @@ $$
 \hbox{\nolinkurl{ivo://ivoa.net/std/ObsCore#timeExt-1.0}}
 $$
 
-In addition the TAP schema containing the ObsCore main table and potentially some of the  extensions
+In addition the tableset schema containing the ObsCore main table and potentially some of the  extensions
 SHOULD use the root ObsCore standardID utype :
 $$
 \hbox{\nolinkurl{ivo://ivoa.net/std/ObsCore}}
